ella/newman/media/css/base.css
/* Please try keep all stylesheets in one file */

/* primitives */
.cb { clear: both; }
.ar { text-align: right; }

a, a:link, a:visited {
    color: #005F00;
    cursor: pointer;
}
a:hover {
  color: #6EA63A;
}
a img {
    border: none;
}

p, ul, ol, h1, h2, h3, h4, h5 { margin: .2em 0; }

ul, ol {
    margin-left: 2em;
}

/* base default layout */
* { margin: 0; padding: 0; }

body {
    font: normal normal 75%/130% Tahoma, sans-serif;
    background: #E9E8DD;
    margin-top: 105px;
}

#container, .favs, #menu-top { min-width: 940px; }

#header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 0;
}

/* Dynamic */

.loading { opacity: .3; }

.overlay {
    position: fixed;
}
.overlay .overlay-upbar {
    height: 30px;
    width: 100%;
    background-color: blue;
}
.overlay .overlay-title {
    float: left;
    padding-top:6px;
    color:white;
    font-size:16px;
    font-weight:bold;
}
.overlay .overlay-closebutton {
    float: right;
}

.error-code object {
    border: solid 3px gray;
}

#branding {
    float: left;
}
#user-tools {
    margin-top: 5px;
    float: right;
}

/* BREADCRUMBS */
div.breadcrumbs {
    background: #eee url(../img/nav-bg.gif) 0 0 repeat-x;
    border-bottom: 1px solid #ddd;
    border-top: 1px solid #ddd;
    padding: 3px 5px;
    overflow: auto;
    font-size: 95%;
}

/* FAVORITE ITEMS */
.favs {
    background: #333 url(../img/bg-favs.png) 0 0 repeat-x;
    height: 76px;
    padding: 2px 5px;
}

.favs.collapsed {
    height: 6px;
    overflow: hidden;
}
.favs ul.items {
    float: left;
    list-style: none;
    margin: 0; padding: 0;
    font: normal 90% "Trebuchet MS", Arial, Helvetica, sans-serif;

}
.favs ul.items li {
    float: left;
    margin: 0 2px;
    padding: 0;
    width: 80px;
    height: 78px;
    background: transparent url(../ico/ct/64/unknown.png) 50% 0 no-repeat;
    opacity: .8;
    text-align: center;
    position: relative;
}
.favs ul.items li:hover { opacity: 1; }
.favs a { text-decoration: none; color: #fff; }
.favs ul.items li a.app { display: block; width: 80px; height: 78px; position: relative; }
.favs ul.items li a.app span {
    background: #000;
    font-weight: bold;
    opacity: .5;
    position: absolute; bottom: 0; left: 0; width: 80px;
}
.favs ul.items li a.app:hover span { opacity: .9 }
.favs ul.items li a.add {
    position: absolute;
    top: 0; right: 0;
    display: block;
    width: 20px; height: 20px;
    background: url(../ico/16/edit_add.png) 100% 50% no-repeat;
    opacity: .6;
}
.favs ul.items li a.add:hover { opacity: 1; }
.favs ul.tools {
    float: right;
    list-style: none;
    font: normal 130%/150% "Trebuchet MS", sans-serif;
}

/* CONTENT */
#content { padding-bottom: 40px; }

/* CONTENT TOOLBAR */
#content-toolbar * { vertical-align: middle; }
#content-toolbar {
    background: #eee;
    width: 100%;
}
#content-toolbar td { border: none; }

a.bl {
    display: block;
}
a.icn {
    padding-left: 20px;
    background: transparent url(../ico/16/foo.png) 0 50% no-repeat;
}
a.btn {
    padding-top: 4px; padding-bottom: 3px; padding-right: 4px;
    border: 1px solid #ddd;
    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -khtml-border-radius: 5px;
    background-color: #E9E8DD;
    margin: 3px 2px;
    text-decoration: none;
    color: #000;
}
a.btn.def {
    font-weight: bold;
    border-color: #ccc;
}
a:hover.btn {
    background-color: #EEEEE7;
    border-color: #77B150;
    color: #005F00;
}

a.btn.icn {
    background-position: 3px 50%;
    padding-left: 23px;
}

a.icn.logout { background-image: url(../ico/16/logout.png); }
a.icn.config { background-image: url(../ico/16/configure.png); }
a.icn.addfav { background-image: url(../ico/16/bookmark_add.png); }
a.icn.eclear { background-image: url(../ico/16/editclear.png); }
a.icn.home { background-image: url(../ico/16/gohome.png); }
a.icn.ok { background-image: url(../ico/16/ok.png); }
a.icn.cancel { background-image: url(../ico/16/cancel.png); }
a.icn.recur { background-image: url(../ico/16/recur.png); }
a.icn.na { background-image: url(../ico/16/na.png); }
a.icn.search { background-image: url(../ico/16/search.png); }
a.icn.filter { background-image: url(../ico/16/filter.png); }
a.icn.add { background-image: url(../ico/16/edit_add.png); }
a.icn.visible { background-image: url(../ico/16/14_layer_visible.png); }
a.icn.novisible { background-image: url(../ico/16/14_layer_novisible.png); }
a.icn.history { background-image: url(../ico/16/history.png); }
a.icn.web { background-image: url(../ico/16/web.png); }
a.icn.save { background-image: url(../ico/16/filesave.png); }
a.icn.saveas { background-image: url(../ico/16/filesaveas.png); }
a.icn.saveall { background-image: url(../ico/16/save_all.png); }
a.icn.edit { background-image: url(../ico/16/edit.png); }
a.icn.help { background-image: url(../ico/16/help.png); }
a.icn.idea { background-image: url(../ico/16/idea.png); }

a.btn.combo {
    padding-right: 18px; padding-left: 4px;
    background: #E9E8DD url(../ico/16/14_layer_lowerlayer.png) 100% 50% no-repeat;
}
a.btn.filter-active { background-color: #FFF8D1; }

/* HOMEPAGE CALENDAR */
.hpbox.calendar .cal { display: none; }

/* FOOTER */

#footer {
    background:#eee url(../img/nav-bg-reverse.gif) bottom left repeat-x;
    position: fixed; left: 0; bottom: 0; right: 0;
    clear: both;
    border-top: 1px solid #ccc;
    padding: 5px;
    text-align: right;
}

/* FORMS */
fieldset, legend { border: 1px solid #ddd; padding: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -khtml-border-radius: 5px; background: #fff; }
legend { padding: 2px 5px; }
label { display: block; clear: both; margin: 5px 0 2px 0; }
label.vCheckboxLabel { display: inline; margin-left: 10px; }
label.required { font-weight: bold; color: darkorange; }
div.submit-row, fieldset.submit-row { border: none; clear:both; margin-top: 5px; padding: 2px 0; text-align: right; }
/* ... */

